fixed login field going off screen on mobile

--- a/public/login.css
+++ b/public/login.css
@@ -99,5 +99,5 @@ html {
     justify-items: center;
     align-items: center;
     float: left;
-    /*margin-top: -100px;*/
+    margin-top: -100px;
   }
